<resources>
    <string name="app_name">Lab4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="here_data">here data</string>
    <string name="have_fun">Baw sie</string>
    <string name="option1">Opcja 1</string>
    <string name="option2">Opcja 2</string>
    <string name="send">Send value</string>
    <string name="left_fragment">Left Fragment</string>
    <string name="right_fragment">Right Fragment</string>
    <string name="center_fragment">Center Fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go">Go</string>
    <string name="mark1">Zaznacz1</string>
    <string name="mark2">Zaznacz2</string>
</resources>