<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:andoroid="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentCenter">

    <!-- LinearLayout do wyśrodkowania elementów -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <!-- Dodanie RadioGroup -->
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- RadioButton Opcja 1 -->
            <RadioButton
                android:id="@+id/radioButtonOption1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option1" />

            <!-- RadioButton Opcja 2 -->
            <RadioButton
                android:id="@+id/radioButtonOption2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option2" />
        </RadioGroup>

        <!-- Dodanie TextView na potrzeby testowania -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/here_data"
            android:id="@+id/text"
            android:textSize="20sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go">
        </Button>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/df_container">

        </FrameLayout>
    </LinearLayout>
</FrameLayout>
